--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react": "^18.2.0",
     "react-context-api": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.5",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
