--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-image-gallery": "^1.2.11",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
