--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.2.0",
     "daisyui": "^2.41.0",
     "firebase": "^9.12.1",
@@ -19,7 +20,6 @@
     "react-hook-form": "^7.39.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
-    "react-image-gallery": "^1.2.11",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
